completed the functionality of all the links

--- a/gallery.html
+++ b/gallery.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
-    <title>Homepage</title>
+    <link rel="stylesheet" href="gallery.css">
+    <title>My-gallery</title>
 </head>
 <body>
     <!--navigation bar-->
@@ -45,40 +45,28 @@
         </div>
     </section>
 
-    <!--Blog & Articles section-->
+    <!--Gallery section-->
 
     <section class="s1">
-        <div class="main-container" id="blog-section">
-            <h2 class="heading"><strong>Blog-Portfolio</strong></h2>
+        <div class="main-container" id="gallery-section">
+            <h2 class="heading"><strong>Welcome To My Gallery</strong></h2>
             <div class="left-column column">
-                <img src="./images/Wizkid.png" alt="picture of Wizkid">
-                <div class="details">
-                    <h4>Is wizkid the greatest?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
-                    </p>
-                    <button><a target='_blank' href="#">Read more -></a></button>
-                </div>
+                <img src="./images/Wizkid.png" alt="vector art of Wizkid">            
             </div>
-            <div class="center-column column">
-                <img src="./images/3.jpg" alt="NFT-art">
-                <div class="details">
-                    <h4>NFT Collection</h4>
-                    <p>This is a personal project that allows a user to store a NFT collection on their personal
-                        website without having the need to go on opensea
-                    </p>
-                    <button><a target='_blank' href="https://github.com/Eke-sims/afro-gods">Github -></a></button>
-                </div>
+            <div class="lc-column column">
+                <img src="./images/Drake-01.png" alt="vector art of drake">                
+            </div>
+            <div class="rc-column column">
+                <img src="./images/Jack-01.png" alt="vector art of johnny depp">                
             </div>
             <div class="right-column column">
-                <img src="./images/Nipsey1-01.png" alt="picture of Nipsey">
-                <div class="details">
-                    <h4>Nipsey's death</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
-                    </p>
-                    <button><a target='_blank' href="#">Read more -></a></button>
-                </div>
+                <img src="./images/Nipsey1-01.png" alt="vector art of Nipsey">
+            </div>
+            <div class="lb-column column">
+                <img src="./images/Rudebwoy2-01.png" alt="vector art of Rudebwoy of p-square">
+            </div>
+            <div class="lcb-column column">
+                <img src="./images/FALZDBG1-01.png" alt="vector art of falz">
             </div>
         </div>
     </section>
