--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./blog.css">
-    <title>My-Blog</title>
+    <link rel="stylesheet" href="./portfolio.css">
+    <title>My-Portfolio</title>
 </head>
 <body>
     <!--navigation bar-->
@@ -18,7 +18,7 @@
             <div class="links-container">
                 <a href="./index.html">Home</a>
                 <a href="blog.html">Blog</a>
-                <a href="#">Gallery</a>
+                <a href="gallery.html">Gallery</a>
                 <a href="portfolio.html">Portfolio</a>
             </div>
         </div>
@@ -28,35 +28,35 @@
 
     <section class="s2">
         <div class="main-container" id="blog-section">
-            <h2 class="heading"><strong>Welcome To My Blog</strong></h2>
+            <h2 class="heading"><strong>Welcome To My Portfolio</strong></h2>
             <div class="left-column column">
-                <img src="./images/Wizkid.png" alt="picture of Wizkid">
+                <img src="./images/My website.png" alt="picture of Wizkid">
                 <div class="details">
-                    <h4>Is wizkid the greatest?</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
+                    <h4>My Personal Webite</h4>
+                    <p>I created a website in order to share what i can do, my collection of vector art which were made
+                        by my humble self and the portfolio section which contains my journey in front-end development
                     </p>
-                    <button><a target='_blank' href="#">Read more -></a></button>
+                    <button><a target='_blank' href="https://eke-sims.github.io/">Github -></a></button>
                 </div>
             </div>
             <div class="lc-column column">
-                <img src="./images/Drake-01.png" alt="picture of Drake">
+                <img src="./images/3.jpg" alt="NFT-art">
                 <div class="details">
-                    <h4>The 6 god</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
+                    <h4>NFT Collection</h4>
+                    <p>This is a personal project that allows a user to store a NFT collection on their personal
+                        website without having the need to go on opensea
                     </p>
-                    <button><a target='_blank' href="https://github.com/Eke-sims/afro-gods">Read more -></a></button>
+                    <button><a target='_blank' href="https://github.com/Eke-sims/afro-gods">Github -></a></button>
                 </div>
             </div>
             <div class="rc-column column">
-                <img src="./images/Jack-01.png" alt="picture of Johnny Depp">
+                <img src="./images/3.jpg" alt="NFT-art">
                 <div class="details">
-                    <h4>Jonny Depp NFT Collection</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
+                    <h4>NFT Collection</h4>
+                    <p>This is a personal project that allows a user to store a NFT collection on their personal
+                        website without having the need to go on opensea
                     </p>
-                    <button><a target='_blank' href="https://github.com/Eke-sims/afro-gods">Read more -></a></button>
+                    <button><a target='_blank' href="https://github.com/Eke-sims">Github -></a></button>
                 </div>
             </div>
             <div class="right-column column">
@@ -66,7 +66,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                         Eaque, accusantium iure distinctio sapiente ipsam quos commodi quo doloribus. Tempora, cum.
                     </p>
-                    <button><a target='_blank' href="#">Read more -></a></button>
+                    <button><a target='_blank' href="https://github.com/Eke-sims/">Github -></a></button>
                 </div>
             </div>
         </div>
