--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="gallery.css">
+    <link rel="stylesheet" href="fontawesome-free/fontawesome-free-6.0.0-beta2-web/css/all.css">
     <title>My-gallery</title>
 </head>
 <body>
@@ -15,11 +16,19 @@
             <div class="logo-container">
                 <h2><a href="./index.html">GOODBOYTIMZ</a></h2>
             </div>
+            <div class="openMenu"><i class="fa fa-bars"></i></div>
             <div class="links-container">
                 <a href="./index.html">Home</a>
                 <a href="blog.html">Blog</a>
-                <a href="#">Gallery</a>
+                <a href="gallery.html">Gallery</a>
                 <a href="portfolio.html">Portfolio</a>
+                <div class="closeMenu"><i class="fa fa-times"></i></div>
+                <span class="icons">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-github"></i>
+                </span>
             </div>
         </div>
     </section>
@@ -94,5 +103,6 @@
             <i><p>&copy; GoodboyTimz</p></i>
         </div>
     </section>
+    <script src="script.js"></script>
 </body>
 </html>
