modified contact page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="gallery.html">Gallery</a>
                 <a href="portfolio.html">Portfolio</a>
                 <div class="closeMenu"><i class="fa fa-times"></i></div>
-                <span class="icons">
+                <span class="icons"> 
                     <i class="fab fa-facebook"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
@@ -48,7 +48,7 @@
             <div class="right-card card">
                 <div id="preview">
                     <h3>What I Do</h3>
-                    <p>I am an aspiring front-end developer, specialized in HTML, CSS, JAVASCRIPT & ReactJS</p>
+                    <p>I am an aspiring front-end developer, specialized in HTML, CSS, JAVASCRIPT & React.JS</p>
                 </div>
             </div>
         </div>
@@ -104,7 +104,10 @@
 
     <section class="s1">
         <div class="main-container" id="socials-container">
-            <div class="warning"><h2>Under construction !!!</h2></div>
+            <i class="fab fa-facebook fa-2xl"></i>
+            <i class="fab fa-instagram fa-2xl"></i>
+            <i class="fab fa-twitter fa-2xl"></i>
+            <i class="fab fa-github fa-2xl"></i>
         </div>
     </section>
 
@@ -112,7 +115,7 @@
 
     <section class="footer">
         <div class="main-container" id="footer">
-            <i><p>&copy; GoodboyTimz</p></i>
+            <i><p>&copy; Timileyin Eke</p></i>
         </div>
     </section>
     <script src="script.js"></script>
